<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pocketpaint_save_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dialog_save_image_name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pocketpaint_image_name_save_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="19dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/pocketpaint_image_format_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/pocketpaint_btn_save_info"
            android:text="@string/dialog_save_image_format"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/pocketpaint_save_dialog_spinner"
            style="@style/PocketpaintSpinnerTheme"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pocketpaint_image_format_title"
            android:spinnerMode="dropdown"
            android:textSize="14sp"
            android:theme="@style/CustomTextViewStyle" />

        <ImageButton
            android:id="@+id/pocketpaint_btn_save_info"
            style="@style/PocketPaintSelectableButton"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/button_info"
            android:src="@drawable/ic_pocketpaint_save_info" />

        <View
            android:layout_width="151dp"
            android:layout_height="1dp"
            android:layout_below="@+id/pocketpaint_save_dialog_spinner"
            android:layout_marginStart="3dp"
            android:background="@color/pocketpaint_main_drawing_surface_inactive" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pocketpaint_save_format_specific_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false" />

    <SeekBar
        android:id="@+id/pocketpaint_gif_delay_seekbar_save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50" />

    <!-- TextView to display delay -->
    <TextView
        android:id="@+id/pocketpaint_gif_delay_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delay: 500 ms" />
    <!-- strings.xml -->



</LinearLayout>
