...
    <string name="clipboard_tool_paste">Paste</string>
    <string name="clipboard_tool_copy">Copy</string>
    <string name="clipboard_tool_cut">Cut</string>

    <string name="stickers">Stickers</string>
    <string name="dialog_import_image_title" translatable="false">@string/button_import_image</string>
    <string name="dialog_save_image_title" translatable="false">@string/menu_save_image</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_error_save_title">Error load/save file</string>
    <string name="dialog_error_sdcard_text">Check image or SD-card!</string>
    <string name="dialog_brush_width_text">Stroke width</string>
    <string name="dialog_warning_new_image">Save changes?</string>
    <string name="help_title">Help</string>
...
    <string name="menu_advanced">Advanced settings</string>
    <string name="menu_zoom_settings">Zoom window settings</string>
    <string name="saved_to">Image saved to\n</string>
    <string name="saved">Image saved</string>
    <string name="copy_to">Copy saved to\n</string>
    <string name="copy">Copy saved</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="overwrite_button_text">Overwrite</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_cannot_resize_to_this_size">cannot resize to this size</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

    <string name="text_tool_dialog_underline_shortcut">U</string>
...
